@@ -1,8 +1,6 @@
 Wyrd To-Do list
 ------------------------------------------------------------------------
 
-* Add commands to jump to the next/previous reminder in time.
-
 * Consider incremental searching.
 
 * Consider an Orpie-like abbreviation syntax for inputting commands.
