@@ -1,6 +1,12 @@
 Wyrd ChangeLog
 --------------------------------------------------------------------------------
 
+2005-09-15     Implemented the 'next_reminder' command, which jumps forward
+               to the next reminder in chronological order.
+
+               Made 'search_next' more robust--certain edge cases are now
+               handled better.
+
 2005-09-13     Improved the alignment of timestamps in the reminder description
                window.
 
